--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,8 @@ pylint = "*"
 [packages]
 python-telegram-bot = "*"
 psycopg2 = "*"
-dotenv = "*"
+setuptools = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.6"
