Add scheduler to bot

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ pylint = "*"
 python-telegram-bot = "*"
 psycopg2 = "*"
 python-dotenv = "*"
+schedule = "*"
+telegram = "*"
 
 [requires]
 python_version = "3.6"
