--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pylint = "*"
 python-telegram-bot = "*"
 psycopg2 = "*"
 python-dotenv = "*"
+dateparser = "*"
 
 [requires]
 python_version = "3.6"
