Add command to check RV Dining Hall count

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ python-telegram-bot = "*"
 psycopg2 = "*"
 python-dotenv = "*"
 dateparser = "*"
+requests = "*"
 
 [requires]
 python_version = "3.6"
